# misery-was-backend

./: .env.sample  .gitmodules  .pre-commit-config.yaml  README.rst  Readme.md  pyproject.toml  tox.ini
.github/workflows/: ci-testing.yml  workflow.yml
misery_was_backend/config/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: setup-postgres.sh
tests/: test_misery_was_backend.py
