[tool.poetry]
name = "misery-was-backend"
version = "0.1.0"
description = ""
authors = ["Allan Mugabwa <mugabwaallanmas@gmail.com>", "Cephas Kingori <email@example.com>", "Jerim Kaura <email@example.com>", "Stephen Mwangi <st3v3n.mw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
django-extensions = "^3.1.5"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38, py39, py310, mypy

[gh-actions]
python = 
	3.8: py38
	3.9: py39
	3.10: py310, mypy

[testenv]
"""
