[tool.poetry]
name = "misery-was-backend"
version = "0.1.0"
description = ""
authors = ["Allan Mugabwa <email@example.com>", "Cephas Kingori <email@example.com>", "Jerim Kaura <email@example.com>", "Stephen Mwangi <st3v3n.mw@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
psycopg2-binary = "^2.9.3"
django-cors-headers = "^3.11.0"
django-extensions = "^3.1.5"
python-dotenv = "^0.19.2"
pre-commit = "^2.17.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
